--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -9,7 +9,7 @@ papers:
     authors: "<a href='https://hanseuljo.github.io'>Hanseul Cho</a>, Baekrok Shin, <b><u>Chaewon Moon</u></b>, Sang-Geun Hong, U-Ju Byeon, Jin-Yong Sung, <a href='https://chulheeyun.github.io'>Chulhee Yun</a>"
     venue: "J-KICS"
     paper_pdf: "https://journal.kics.or.kr/digital-library/103567"
-    selected: n
+    selected: y
 
 
   - title: "The Cost of Robustness: Tighter Bounds on Parameter Complexity for Robust Memorization in ReLU Nets"
