--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -3,5 +3,5 @@ title: "Master student at KAIST"
 dept: "KAIST AI"
 email: "chaewon.moon [AT] kaist.ac.kr"
 profile_pic: "/assets/profile-pics/chaewon.jpg"
-cv: "/assets/cv/cv_chaewonmoon_november_2025.pdf"
+cv: "/assets/cv/CV.pdf"
 google_scholar: "https://scholar.google.com/citations?user=JlDsUTcAAAAJ&hl=en"
