--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,7 +1,8 @@
 name: "Chaewon Moon"
-title: "Master student at KAIST"
+title: "M.S. student at KAIST"
 dept: "KAIST AI"
 email: "chaewon.moon [AT] kaist.ac.kr"
 profile_pic: "/assets/profile-pics/chaewon.jpg"
 cv: "/assets/cv/CV.pdf"
 google_scholar: "https://scholar.google.com/citations?user=JlDsUTcAAAAJ&hl=en"
+linkedin: "https://www.linkedin.com/in/chaewon-moon-502454287"
